--- a/src/body/streamer/obs/supervisord.conf
+++ b/src/body/streamer/obs/supervisord.conf
@@ -46,6 +46,16 @@ priority=40
 stdout_logfile=/var/log/supervisor/novnc.log
 stderr_logfile=/var/log/supervisor/novnc_err.log
 
+[program:download-assets]
+command=python3 /app/download_assets.py
+autostart=true
+autorestart=false
+startsecs=0
+priority=45
+stdout_logfile=/var/log/supervisor/download_assets.log
+stderr_logfile=/var/log/supervisor/download_assets_err.log
+environment=PYTHONPATH="/app/src"
+
 [program:obs]
 command=/usr/local/bin/start_obs.sh
 autostart=true
@@ -54,3 +64,4 @@ priority=50
 environment=DISPLAY=":99"
 stdout_logfile=/var/log/supervisor/obs.log
 stderr_logfile=/var/log/supervisor/obs_err.log
+
