--- a/scripts/news_collector/Dockerfile
+++ b/scripts/news_collector/Dockerfile
@@ -8,7 +8,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY scripts/news_collector/ /app/scripts/news_collector/
-COPY src/saint_graph/config.py /app/src/saint_graph/config.py
+COPY src/infra/ /app/src/infra/
+COPY src/saint_graph/__init__.py src/saint_graph/config.py /app/src/saint_graph/
 
 # Set Python path (include src for top-level packages, and app for scripts)
 ENV PYTHONPATH=/app/src:/app
