--- a/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
+++ b/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
@@ -19,7 +19,7 @@ SdrWhiteLevel=300
 HdrNominalPeakLevel=1000
 
 [Output]
-Mode=Simple
+Mode=Advanced
 FilenameFormatting=%CCYY-%MM-%DD %hh-%mm-%ss
 DelayEnable=false
 DelaySec=20
@@ -36,7 +36,7 @@ LowLatencyEnable=false
 FilePath=/tmp
 RecFormat=mkv
 RecQuality=Stream
-RecEncoder=nvenc
+RecEncoder=ffmpeg_nvenc
 RecFormat2=mkv
 VBitrate=2500
 ABitrate=160
@@ -50,7 +50,7 @@ RecRBPrefix=Replay
 StreamAudioEncoder=aac
 RecAudioEncoder=aac
 RecTracks=1
-StreamEncoder=nvenc
+StreamEncoder=ffmpeg_nvenc
 
 [Stream1]
 IgnoreRecommended=false
@@ -63,7 +63,7 @@ ApplyServiceSettings=true
 UseRescale=false
 TrackIndex=1
 VodTrackIndex=2
-Encoder=obs_x264
+Encoder=ffmpeg_nvenc
 RecType=Standard
 RecFilePath=/root
 RecFormat2=mkv
